<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:textColor="@color/white"
            android:id="@+id/edtSearch"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:hint="@string/searchName" />

        <ImageView
            android:src="@drawable/search"
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnSearch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cityName"
            android:textSize="30sp" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tvNationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nationName"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tvNhietDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tvNhietDo"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tvTrangThai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tvTrangThai"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDoAm" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/tvDoAm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvHumidity"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTocDoGio" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/tvTocDoGio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvSpeedWind"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvMay" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/tvMay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvCloud"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvApSuat" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/tvApSuat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvApSuat"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvMatTroiMoc" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/tvMatTroiMoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvMatTroiMoc"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvMatTroiLan" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/tvMatTroiLan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvMatTroiLan"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnNextDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNextDay" />

</LinearLayout>