<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="horizontal"
    android:weightSum="2"
    android:gravity="center"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:id="@+id/tvNgay"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/ngay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/tvTrangThai"
            android:text="@string/trangthai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgTrangThai"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:src="@mipmap/ic_launcher"
                android:layout_height="50dp" />
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tvMax"
                android:textSize="18sp"
                android:text="@string/tvmax"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tvMin"
                android:textSize="18sp"
                android:text="@string/tvMin"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>